--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -1,6 +1,7 @@
 {
   "replacements": {
-    "#groepseigen": "groepseigen",
+    "#groepseigenfuncties": "groepseigenfuncties",
+    "#Groepseigenfuncties": "Groepseigenfuncties",
     "#groepen": "groepen",
     "#Groepen": "Groepen",
     "#groep": "groep",
@@ -75,7 +76,7 @@
   "2e9f8eb3-806a-4037-bd01-f381a725956b": "Functie bewerken",
   "e55af974-4ce3-4cf2-a56b-d7c8f6fbeaec": "Ingebouwde functies",
   "7540c9f1-2164-4865-a6c5-ad72e0abd4e5": "Nieuwe functie",
-  "25fc3805-35f8-4cb4-9d1e-dff607f9738f": "Groepseigenfuncties",
+  "25fc3805-35f8-4cb4-9d1e-dff607f9738f": "#Groepseigenfuncties",
   "e7ba96d7-b233-45c4-8331-d429fcea40a9": "Functies van leden",
   "3f81e947-a0a3-4d21-81d7-3298e65d49b1": "Ben je zeker dat je deze facturatiegegevens wilt verwijderen?",
   "996a4109-5524-4679-8d17-6968282a2a75": "Ben je zeker dat je wilt sluiten zonder op te slaan?",
@@ -625,7 +626,7 @@
   "390f755c-b757-4a54-9bb4-d380e5869081": "Geen functies gevonden",
   "e4f4c4a8-0185-4f84-b5a4-ae58d2b633e3": "Functies op nationaal niveau",
   "dab378b1-f860-4377-bd0c-04eb2b57af74": "Deze functies zijn globaal en gelden enkel op koepelniveau. Enkel een hoofdbeheerder van de koepel kan deze toekennen aan een lid. Sommige functies geven ook toegang het het administratieportaal.",
-  "f4fef92e-cb28-408b-ada2-cf8b0da0fbfd": "Groepseigenfuncties",
+  "f4fef92e-cb28-408b-ada2-cf8b0da0fbfd": "#Groepseigenfuncties",
   "fcf09121-af79-4d3f-90e7-31dec01ebb98": "Standaardfuncties op lokaal niveau",
   "aad47217-df26-43ce-a43c-896697d5fbd4": "Voeg eigen functies toe die enkel van toepassing zijn in je eigen #groep.",
   "e6da382b-6acc-4a77-ab74-ece7ea002d5f": "Deze functies worden gekoppeld aan een lid samen met een #lokale-groep, door een hoofdbeheerder van die #groep. Een #lokale-groep kan zelf ook nog #groepseigenfuncties toevoegen om deze uit te breiden.",
@@ -4022,7 +4023,7 @@
   "4cfb2940-8532-446e-b543-a4c7ba9618a3": "Niet opslaan",
   "d51b7cc1-ce3d-45ad-9be0-105e97d0e4b9": "Toegangsbeheer",
   "89b5d229-1850-4063-960a-dbacee794d72": "Standaardfuncties",
-  "5f37ed88-8822-44bb-8f06-7f527c5d00fe": "Groepseigenfuncties",
+  "5f37ed88-8822-44bb-8f06-7f527c5d00fe": "#Groepseigenfuncties",
   "89360094-8856-4b28-8921-e3d561ef824c": "De wijzigingen zijn opgeslagen",
   "055ba4d1-abf5-4c10-9da1-29311a113568": "Rechten voor",
   "db4cb26a-c23f-4f29-b4c3-233cd0f08f38": "Nieuwe rol",
@@ -4564,7 +4565,7 @@
   "372836f6-9b19-49b6-b6d9-5afe781d836e": "Voeg minstens één ouder toe",
   "ccc74056-d922-4af6-8318-4e797e0fd35e": "Voeg bij minstens één ouder een rijksregisternummer toe.",
   "8c143a89-4f63-45f8-a369-1eae10620db4": "Standaardfuncties",
-  "20d0f420-edec-4c9f-9584-990258dcf1bf": "Groepseigenfuncties",
+  "20d0f420-edec-4c9f-9584-990258dcf1bf": "#Groepseigenfuncties",
   "0234d6cf-7eac-411a-9321-d9ce81224df8": "Nationaal niveau",
   "81e6a643-e2e6-4ee5-bfc3-29fc17f83f9a": "Functies van",
   "40eced71-abce-42f2-a157-5c7a6686bc63": "Van",
