--- a/shared/locales/src/jamboree/base.json
+++ b/shared/locales/src/jamboree/base.json
@@ -22,11 +22,14 @@
         "Werkjaren": "Scoutsjaren",
         "demovereniging": "Scoutsgroep De Goudvis",
         "groepsnaam": "eenheidsnaam",
+        "groepsnummer": "eenheidsnummer",
         "vereniging": "eenheid",
         "verenigingen": "eenheden",
         "werkjaar": "scoutsjaar",
         "werkjaren": "scoutsjaren",
-        "Voorbeeldleeftijdsgroep": "Welpen"
+        "Voorbeeldleeftijdsgroep": "Welpen",
+        "#groepseigenfuncties": "eenheidseigenfuncties",
+        "#Groepseigenfuncties": "Eenheidseigenfuncties"
     },
     "b4307772-62dd-48a4-bae3-9d46df314727": "Welkom op Jamboree 2027. Ga hieronder naar het ledenportaal om je in te schrijven of om jouw gegevens te beheren.",
     "5dbc2f08-f2d0-43bc-973d-b789077ca3ad": "Welkom op het beheerdersportaal van Jamboree. Hier kan je leden beheren en instellingen aanpassen.",
