Fixed trailing comma

--- a/shared/locales/src/digit/base.json
+++ b/shared/locales/src/digit/base.json
@@ -6,7 +6,7 @@
         "het ledenportaal": "‘Mijn account’",
         "#platform": "Ravot",
         "Stamhoofd": "Ravot",
-        "Demovereniging": "KSA Demo",
+        "Demovereniging": "KSA Demo"
     },
     "5dbc2f08-f2d0-43bc-973d-b789077ca3ad": "Welkom op Ravot voor jouw groep. Hier kan je jouw groep beheren, leden bekijken, en instellingen aanpassen.",
     "b091538b-014e-4db2-8241-9ed98e0c51c7": "Breng een kost in rekening per betaling (dus slechts één keer, ook als er meerdere zaken worden afgerekend in één betaling). Wettelijk gezien is het niet toegestaan dat je deze laat afhangen van de gekozen betaalmethode (dat is dus niet mogelijk).",
