Fixed incorrect plural word

--- a/shared/locales/src/base.json
+++ b/shared/locales/src/base.json
@@ -4,8 +4,8 @@
         "#Groepseigenfuncties": "Verenigingseigenfuncties",
         "#groepen": "verenigingen",
         "#Groepen": "Verenigingen",
-        "#groep": "verenigingen",
-        "#Groep": "Verenigingen",
+        "#groep": "vereniging",
+        "#Groep": "Vereniging",
         "#lokale-groepen": "verenigingen",
         "#Lokale-groepen": "Verenigingen",
         "#lokale-groep": "vereniging",
