Fixed maintain replacement Demovereniging order before replacing 'vereniging'

--- a/shared/locales/src/platforms/base.json
+++ b/shared/locales/src/platforms/base.json
@@ -1,5 +1,6 @@
 {
     "replacements": {
+        "Demovereniging": "Demovereniging",
         "#groepseigenfuncties": "groepseigenfuncties",
         "#Groepseigenfuncties": "Groepseigenfuncties",
         "#groepen": "groepen",
