--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -603,7 +603,7 @@
   "4e842082-57fa-49ed-a806-6861cc913d12": "Ingebouwde persoonsgegevens uitbreiden",
   "09eb3057-c765-4909-b821-e75877b44135": "Extra persoonsgegevens",
   "a72d08ad-b23c-4079-b375-1dd569da140a": "Breid het aantal persoonsgegevens zelf nog uit. Vervolgens kan je per inschrijvingsgroep (of gewoon voor alle leden) de persoonsgegevens inschakelen.",
-  "07d18e1b-2935-4945-9595-50e16a929b19": "Voeg zelf nog persoonsgegevens toe die voor alle #lokale-groepen beschikbaar zijn. Je kan deze vervolgens verplichten voor alle leden die inschrijven bij gelijk welke standaard-leeftijdsgroep, of deze verplichten per standaard-leeftijdsgroep (via de instellingen van elke standaard-leeftijdsgroep). Indien niet ingeschakeld kunnen #lokale-groepen deze ook nog inschakelen volgens hun wensen.",
+  "07d18e1b-2935-4945-9595-50e16a929b19": "Voeg zelf nog persoonsgegevens toe die voor alle #lokale-groepen beschikbaar zijn. Je kan deze vervolgens verplichten voor alle leden die inschrijven bij gelijk welke standaard leeftijdsgroep, of deze verplichten per standaard leeftijdsgroep (via de instellingen van elke standaard leeftijdsgroep). Indien niet ingeschakeld kunnen #lokale-groepen deze ook nog inschakelen volgens hun wensen.",
   "a9c8e948-2bf2-4915-90a0-1513397d747c": "Voorbeeld",
   "e9a2ed45-f158-4e88-9a3c-75ee502f0e7a": "Lid",
   "1cb53933-ed06-45ae-9240-dd389298823c": "Ben je zeker dat je wilt sluiten zonder op te slaan?",
@@ -3114,7 +3114,7 @@
   "3ea9a45c-0b2c-4ed5-9307-d05cbabe8e0d": "Waarschuwingstekst voor beheerder",
   "a226a0aa-0706-4312-b51a-3712299c8b00": "Waarschuwingstekst voor lid (optioneel)",
   "73a3d0bc-55a4-47e6-b650-27bb961a0721": "Een vragenlijst bevat één of meerdere persoonsgegevens, eventueel opgedeeld in categorieën. Lees",
-  "3c283583-6a2d-497e-abe4-0e67852497b7": "Verplicht ingeschakeld voor alle leden ingeschreven bij minstens één standaard-leeftijdsgroep",
+  "3c283583-6a2d-497e-abe4-0e67852497b7": "Verplicht ingeschakeld voor alle leden ingeschreven bij minstens één standaard leeftijdsgroep",
   "090e5afe-2d7a-4948-9f3b-56a3fb4919aa": "Verplicht ingeschakeld voor alle leden (behalve wachtlijsten en activiteiten)",
   "86e7714a-6658-4efd-9cd2-00ba243b4d10": "Deze vragenlijst is leeg en zal nog niet getoond worden.",
   "00b57923-c4f1-47ab-a90a-275d192e53e8": "Vraag",
